# botonio-botsci

./: .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  Cargo.toml  README.md  deploy.ps1  pyrightconfig.json
crates/backends/: Cargo.toml
crates/backends/src/: lib.rs
crates/backends/src/discord/: channels.rs  client.rs  error.rs  fakes.rs  http.rs  mod.rs  oauth.rs  roles.rs
crates/backends/src/solidarity_tech/: client.rs  error.rs  fakes.rs  fixtures.rs  http.rs  member.rs  mod.rs  status.rs  wire.rs
crates/backends/src/util/: http.rs  mod.rs  secret.rs  serde_de.rs
crates/backends/tests/: discord_live.rs  solidarity_tech_live.rs  solidarity_tech_mock.rs
crates/backends/tests/solidarity_tech_mock/: fixtures.rs  harness.rs  steps_members.rs  steps_resilience.rs
crates/bot/: Cargo.toml
crates/bot/examples/: sso_keygen.rs
crates/bot/src/: config.rs  data.rs  error.rs  guild_config.rs  guild_guard.rs  join.rs  lookup.rs  main.rs  moderator.rs  notify.rs  ping.rs  refresh.rs  reminders.rs  scan.rs  self_verify.rs
crates/bot/src/commands/: bulk_verify.rs  card.rs  channels.rs  forget.rs  grace.rs  help.rs  mod.rs  reclick.rs  refresh_cache.rs  reminders.rs  setup.rs  strip_roles.rs  verify.rs
crates/bot/src/render/: bulk_verify.rs  card.rs  help.rs  mod.rs  modal.rs  reminders.rs  scan.rs  self_verify.rs  setup.rs  verify.rs
crates/bot/src/sso/: assertion.rs  config.rs  flow.rs  mod.rs  server.rs  store.rs
crates/bot/tests/: guild_guard.rs  lookup.rs  refresh_cache.rs  wizard_dispatch.rs
crates/engine/: Cargo.toml
crates/engine/src/: audit.rs  bulk.rs  card.rs  error.rs  lib.rs  paging.rs  scan.rs  seam.rs  store.rs  testkit.rs  verify.rs
crates/engine/src/channels/: facade.rs  mod.rs  model.rs  plan.rs  report.rs  (+1 more)
crates/engine/tests/: bulk.rs  channels.rs  reminders.rs  scan.rs  strip.rs  verify.rs
crates/mock-st/: Cargo.toml
crates/mock-st/src/: lib.rs  persona.rs  roster.rs  server.rs
crates/mock-st/tests/: bind.rs  roster_mock.rs
crates/persistence/: Cargo.toml
crates/persistence/.sqlx/: query-05c8559e96c1adefcd9f38929fef8d6e4add5dbe6be41cab535f3aebd8e65905.json  query-0f3573cabb212078dc5b9918750533a8f198e66ca604ae20ddf11fb303b43ed6.json  query-10d684e5d116f3ceaadb17709f7668b49d7e119a08b8b5e1853678cb49329014.json  query-11665de5b8021dffbe016f463ba5c01e3063cd78deb41b47348249cb9b9724e2.json  query-1562dec6e12bd7ec30b9324fc01758c070230e1b76ab23803b06b710d7bf5a0b.json  query-1a215dc3b3c11b8276e760343b9726c5e4a194e064c7e54c3f6a2f1204a47aba.json  query-1b8759089df2ee19efc1d41b279df8481b67aca9d114659c1670963b3880c0c3.json  query-1d1aeea74b4dde4cbf601e7cc3ae314d760b26d4cb16fe48d66fd08ef0954abc.json  query-210ecc4ec2281ca4fe6043510b05f7ef1665d2d82f533c585899bc81d87417b5.json  query-2415fc1220435fb55da7797886878993d878973135aac8b42e2a71e598547877.json  query-2656ee19ef3a0e90e20a13857c323ebfc48aa4ca94750b809f94f19d1a6d5955.json  query-2e1b9a12dba6609a1fdc4f44b7c229b135487b10b6e5a4db2bf4765aea4b8aea.json  query-3491ea44982268d34276ad4e2d456266b6989fa71c38c6cdc3c562fe9565f507.json  query-3bb41faf81acfa52faf891104ab599a42aa49cb86cf2e408f1f1c0a284e44128.json  query-41aa9cf9e01082292ee4f888967ee0d20dad81f5a6b032d4a58bd8864ebcf212.json  query-462ff52607466879aa08aa5c328f59c36041df73fadbfcdc7e66cda314818559.json  query-4a2f2d38c705e121fe6ef4698c6701b5ac6c83464a97134ba24aaaa294340bbe.json  query-4b281a618e3f6240efcefdba82adc20d88fc90d0c555966e7a8e93cd25689e09.json  query-53aca85170504f4e0e7b579a16c9ecf5842c7b4553d101f42b80b0ab16ada0e0.json  query-547f734252b8061cc1a7c2c03709b7754ec4123a993cc9989ddae662d6fc195b.json  query-552fe5bd6a301de527334b4c1273da045b4a2bc7b72e7094656815ae810e654e.json  query-56eb18050a562748cf94e6dceb84dd8c9588560589003127c5c18f6c387e8bab.json  query-5757a071c7bcd6e4596a87f7dac039952b9f34cf17b17c5c13964003abcd3fd7.json  query-57fedbefe93139259ceaffef28b2ceebbd9b9e14d7a2fdc0c75371b91a956fa3.json  query-5e2f11e912b038fa307430421e37c48e55da8e23f74d34356690b9bb31fc41ce.json  query-63e7b1ff8b53178b251a999d37adf58ba982fd6776712526d1c0547f72e8bb97.json  query-6403efdab085d89b47c589da60f56d744310bf1d202bbe49967f6e0f519a5d34.json  query-64ecdcb542ca1f717822571294dcf442c70e2cf98e17b3ce4286b9f09fecee11.json  query-6661cabcb9026b2b5814ce1bfa39256b36d8efa77ef05630675bc2f4e8bd77a9.json  query-66f92b354cc28b183c47ec19c362fc212d562ed5f4790f7f8f63c68bc5e03ffc.json  query-68550e07838d0b0e0157cc2fc055d00a8a1d8b0fec145be27839d123f6fbbd61.json  query-6d8664e21d99dacc4b7811b23d93b2637bfc54eb3b2843e1cab13fd78f361c4f.json  query-7206c28a7ff3860353527b42f8c1befeab7aeba45548ed2feef8c990123eaa89.json  query-72ff701727e477f3d151d6ad2f8753319891ec38c13ffb2c81800c26f84da9cb.json  query-740cebea23ab81683e9c60f312f6debe59bea11313516af4b9e58035b8702e57.json  query-7e442df3f2e636a101f516fe8750ff2b6021e4176b279d4661685e0fe83763ff.json  query-7feae8bdf97fc402ce96e2fb7858dc9548e513b489835e46519584da27665ee5.json  query-826b6c7d1c25033784fc170f9c5965269fb743b50cbb96338f60a23cbea327ea.json  query-838e1eef8e813b5efbcc6eff253c8f4d2396b1586e90ead53aa97142872103f4.json  query-85c4a293e2f239e9500c493649219c19a767154abc8ed0afd68087fa83274211.json  (+34 more)
crates/persistence/migrations/: 0001_init.sql  0002_member_cache_st_key.sql  0003_guild_config.sql  0004_manual_override.sql  0005_override_note.sql  0006_bulk_verify.sql  0007_scan_enabled.sql  0008_bulk_queue_kind.sql  0009_verification_log_channel.sql  0010_channel_perms_snapshot.sql  0011_dues_reminders.sql  0012_channel_perms_snapshot_grant.sql  0013_dues_reminder_redesign.sql  0014_persistent_message_refs.sql  0015_sso_enabled.sql
crates/persistence/src/: auditor.rs  error.rs  lib.rs  migrate.rs  pg_store.rs
crates/persistence/tests/: auditor.rs  conformance.rs
scripts/botonio_deploy/: __init__.py  __main__.py  cli.py  ops.py  pyproject.toml  redeploy.py
scripts/botonio_deploy/assets/: botonio-botsci@.service  botonio-db-backup.py  botonio-db-backup.service.tmpl
scripts/botonio_deploy/defs/: __init__.py  backup.py  bot.py  db.py
scripts/botonio_deploy/provision/: __init__.py  creds.py  db.py  systemd.py
(+79 files in other folders)
