[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "botonio-botsci" # avoids the package name (Windows launch-name trap)
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15.7"
domain = { path = "../domain" }
engine = { path = "../engine" }
mock-st = { path = "../mock-st" }
poise = "0.6"
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
thiserror = "2"
chrono = "0.4"

[dev-dependencies]
serde_json = "1"
cucumber = "0.21"
futures = "0.3"

# Behavior suite for the home-guild guard - offline, Cucumber, mocks only (no live
# target). Protagonist: Botonio. Runs on every `cargo test` (no loopback server).
[[test]]
name = "guild_guard"
harness = false

# `sd-notify` is a Unix-datagram-socket protocol and is meaningless off Linux; gating
# it here keeps non-Linux development builds (Windows/macOS) from pulling or compiling it.
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"
