[package]
name = "discord-bot"
version = "1.0.0-rc1.0.1"
edition = "2024"

[[bin]]
name = "botonio-botsci" # avoids the package name (Windows launch-name trap)
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
arc-swap = "1"
async-trait = "0.1"
dotenvy = "0.15.7"
domain = { path = "../domain" }
engine = { path = "../engine" }
mock-st = { path = "../mock-st" }
persistence = { path = "../persistence" }
poise = "0.6"
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "collector",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
chrono = "0.4"
pasetors = "0.7"
getrandom = "0.4"
hex = "0.4"

[dev-dependencies]
backends = { path = "../backends", features = ["fakes"] }
cucumber = "0.21"
futures = "0.3"

# Behavior suite for the home-guild guard - offline, Cucumber, mocks only.
# Protagonist: Botonio. Runs on every `cargo test` (no loopback server).
[[test]]
name = "guild_guard"
harness = false

# Behavior suite for the moderator lookup decision core (`src/lookup.rs`). Offline,
# Cucumber, mocks only - no database, no gateway. Cast: Sonic (moderator), Eggman
# (non-moderator snoop), Tails (member with a record), Shadow (member with none).
[[test]]
name = "lookup"
harness = false

# Behavior suite for the verify wizard's modal re-click dispatch (`src/commands/reclick.rs`).
# Offline, Cucumber, no gateway. Cast: Ralsei is the moderator running the wizard.
[[test]]
name = "wizard_dispatch"
harness = false

# Behavior suite for the /refresh-cache cooldown (`src/refresh.rs`). Offline, Cucumber, no
# database or gateway - drives the pure Cooldown over a hand-advanced clock. Cast: Sonic.
[[test]]
name = "refresh_cache"
harness = false

# `sd-notify` is a Unix-datagram-socket protocol and is meaningless off Linux; gating
# it here keeps non-Linux development builds from pulling or compiling it.
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"
