[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
backends = { path = "../backends" }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tracing = "0.1"
# Async trait definitions so `MemberStore` is object-safe from day one; a later
# sqlx/Postgres-backed implementation drops in without a signature change.
async-trait = "0.1"

[dev-dependencies]
# Enable the backends' mockall mocks so the store tests run without a network;
# pull in a runtime for the `#[tokio::test]` async cases.
backends = { path = "../backends", features = ["mock"] }
mockall = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
cucumber = "0.21"

# Behaviour suite for the verify orchestrator (`src/verify.rs`). Offline, Cucumber,
# mocks only - no database, no gateway. Cast: Sonic (the moderator), Tails (member
# known by handle only), Knuckles (linked, handle drifted), Shadow (unknown), Eggman
# (handle owned by another account).
[[test]]
name = "verify"
harness = false

# Behaviour suite for the bulk-verify sweep + resumable session (`engine::bulk` +
# `BulkSessionStore`). Offline, Cucumber, mocks only. Cast: Sonic (the moderator
# running /bulk-verify), Tails (a member the cache knows, good standing), Shadow
# (unknown - a miss), Knuckles (already holds the Member role), Silver (a second miss).
[[test]]
name = "bulk"
harness = false
