[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
backends = { path = "../backends" }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# Async trait definitions so `MemberStore` is object-safe from day one; a later
# sqlx/Postgres-backed implementation drops in without a signature change.
async-trait = "0.1"

[dev-dependencies]
# Enable the backends' hand-written fakes so the store tests run without a network;
# pull in a runtime for the `#[tokio::test]` async cases.
backends = { path = "../backends", features = ["fakes"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
cucumber = "0.21"

# Behaviour suite for the verify orchestrator (`src/verify.rs`). Offline, Cucumber,
# mocks only - no database, no gateway. Cast: Sonic (the moderator), Tails (member
# known by handle only), Knuckles (linked, handle drifted), Shadow (unknown), Eggman
# (handle owned by another account).
[[test]]
name = "verify"
harness = false

# Behaviour suite for the bulk-verify sweep + resumable session (`engine::bulk` +
# `BulkSessionStore`). Offline, Cucumber, mocks only. Cast: Sonic (the moderator
# running /bulk-verify), Tails (a member the cache knows, good standing), Shadow
# (unknown - a miss), Knuckles (already holds the Member role), Silver (a second miss).
[[test]]
name = "bulk"
harness = false

# Behaviour suite for the staging `/strip-roles` reset (`Member::strip`). Offline,
# Cucumber, mocks only. Cast: Sonic (the moderator), Knuckles (hand-approved), Tails
# (a plain member the cache knows), Shadow (a stale override marker, no stamp).
[[test]]
name = "strip"
harness = false

# Behaviour suite for the scheduled-scan plan + mass-demote tripwire (`engine::scan::plan`).
# Offline, Cucumber, mocks only. Cast: the scan reconciles a roster of Sonic-cast members;
# Rouge is linked but her record has no standing (malformed - left untouched).
[[test]]
name = "scan"
harness = false

# Behaviour suite for the channel-permission terraform (classify, guard, gate, drift-skip,
# check/save/restore). Offline, Cucumber, mocks only. Cast: Tails (the moderator running
# the terraform); Sonic-cast channels (general, welcome, dues-desk, staff-chat, etc.).
[[test]]
name = "channels"
harness = false

# Behaviour suite for the dues-reminder planner (`engine::reminders::plan` +
# `select_milestone`). Offline, Cucumber, mocks only. Cast: Sonic (the sweep protagonist),
# Tails and Amy for per-member gate scenarios.
[[test]]
name = "reminders"
harness = false
