[package]
name = "mock-st"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
backends = { path = "../backends" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt"] }
tracing = "0.1"

[dev-dependencies]
cucumber = "0.21"
domain = { path = "../domain" }
futures = "0.3"
secrecy = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }

# Behavior suite for the mock server - Cucumber, real client over loopback.
# Protagonist: Botonio. Uses the crate's own `backends` dependency (no re-declare).
[[test]]
name = "roster_mock"
harness = false
